[gd_scene load_steps=14 format=3 uid="uid://do62jdhomt2h5"]

[ext_resource type="Script" path="res://scripts/insane_pool/holes/hole.gd" id="1_aaa27"]
[ext_resource type="Texture2D" uid="uid://ctvvk22bkyrar" path="res://assets/insane_pool/world/holes/hole_orange.png" id="2_30qwm"]
[ext_resource type="Script" path="res://scripts/insane_pool/game_object.gd" id="2_qihev"]
[ext_resource type="Texture2D" uid="uid://nii5ei4ihc54" path="res://assets/insane_pool/world/holes/hole_blue.png" id="3_mkqmo"]
[ext_resource type="Texture2D" uid="uid://dtaont0mi8ato" path="res://assets/insane_pool/world/holes/hole_green.png" id="4_ca5ku"]
[ext_resource type="Texture2D" uid="uid://bhp7n5vm3g7cj" path="res://assets/insane_pool/world/holes/hole_red.png" id="6_8w4as"]

[sub_resource type="Resource" id="Resource_jcuyn"]
resource_local_to_scene = true
script = ExtResource("2_qihev")
my_color = 0
texture_options = Array[CompressedTexture2D]([ExtResource("3_mkqmo"), ExtResource("4_ca5ku"), ExtResource("2_30qwm"), ExtResource("6_8w4as")])

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tpvgx"]
radius = 10.5
height = 54.5

[sub_resource type="CircleShape2D" id="CircleShape2D_xue5s"]
radius = 29.0

[sub_resource type="Gradient" id="Gradient_s6ovw"]
offsets = PackedFloat32Array(0.590604, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rw68e"]
gradient = SubResource("Gradient_s6ovw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o7ltl"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 64.0
angle_min = -720.0
angle_max = 720.0
direction = Vector3(-1, 0, 0)
initial_velocity_min = 16.0
initial_velocity_max = 64.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
gravity = Vector3(0, -248, 0)
scale_min = 2.0
scale_max = 8.0
color_ramp = SubResource("GradientTexture1D_rw68e")
turbulence_noise_speed = Vector3(0, -50, 0)
turbulence_influence_min = 0.0
turbulence_influence_max = 0.328

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8y6h5"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 32.0
angle_min = -720.0
angle_max = 720.0
initial_velocity_min = 16.0
initial_velocity_max = 64.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
gravity = Vector3(0, -500, 0)
scale_min = 2.0
scale_max = 16.0
color_ramp = SubResource("GradientTexture1D_rw68e")
turbulence_noise_speed = Vector3(0, -50, 0)
turbulence_influence_min = 0.0
turbulence_influence_max = 0.328

[node name="Hole" type="Node2D" groups=["hole"]]
script = ExtResource("1_aaa27")
game_object_data = SubResource("Resource_jcuyn")

[node name="SuckageDetector" type="Area2D" parent="."]
position = Vector2(0, 131)
scale = Vector2(4, 4)
collision_layer = 0
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuckageDetector"]
shape = SubResource("CapsuleShape2D_tpvgx")

[node name="HoleDetector" type="Area2D" parent="."]
position = Vector2(0, 22)
collision_layer = 0
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoleDetector"]
shape = SubResource("CircleShape2D_xue5s")

[node name="SuckEffectR" type="GPUParticles2D" parent="."]
position = Vector2(36, 220)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_o7ltl")
lifetime = 0.75

[node name="SuckEffectL" type="GPUParticles2D" parent="."]
position = Vector2(-36, 220)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_8y6h5")
lifetime = 0.75

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = ExtResource("2_30qwm")
hframes = 2

[connection signal="body_entered" from="SuckageDetector" to="." method="_on_suckage_detector_body_entered"]
[connection signal="body_exited" from="SuckageDetector" to="." method="_on_suckage_detector_body_exited"]
[connection signal="body_entered" from="HoleDetector" to="." method="_on_hole_detector_body_entered"]
